@@ -11,6 +11,7 @@ documents those changes that are of interest to users and admins.
  -- BGQ - handle preemption.
  -- Add an srun shepard process to cancel a job and/or step of the srun process
     is killed abnormally (e.g. SIGKILL).
+ -- BGQ - handle deadlock issue when a nodeboard goes into an error state.
 
 * Changes in SLURM 2.4.0.pre2
 =============================
